2003-03-10  John Levon  <levon@movementarian.org>

	* configure.in:
	* doc/Makefile.am:
	* doc/xsl/xhtml.xsl:
	* doc/xsl/xhtml-chunk.xsl:
	* doc/xsl/catalog-1.xml.in: Use a catalog for finding
	the XSL, so we only have one .in file now.

2003-03-08  Will Cohen  <wcohen@redhat.com>

	* doc/Makefile.am: Correct path for htmldir.

2003-03-08  John Levon  <levon@movementarian.org>

	* libop/op_cpu_type.c: improve error message

	* utils/op_help.c: show CPU name in events list. Show CPU
	 pretty name in op_help --get-cpu-type.

2003-03-08  John Levon  <levon@movementarian.org>

	* configure.in: specify distcheck ./configure flags.
	  Add version.h to distclean.

	* doc/Makefile.am: 
	* doc/xsl/xhtml-1.in:
	* doc/xsl/xhtml-chunk-1.in: fix make distcheck

2003-03-08  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/xsl/.cvsignore: update

	* module/x86/cpu_type.c: <smpboot.h> is not necessary

2003-03-07  John Levon  <levon@movementarian.org>

	* README: document autogen.sh

2003-03-07  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* doc/xsl/xhtml.xsl.in: move to
	* doc/xsl/xhtml-1.xsl.in: here
	* doc/xsl/xhtml-chunk.xsl.in: move to
	* doc/xsl/xhtml-chunk-1.xsl.in: here
	* doc/Makefile.am; update according
	* configure.in: avoid to touch doc/xsl generated files

2003-03-07  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* daemon/opd_image.c:
	* daemon/op_stats.c:
	* daemon/opd_stats.h: add statistics for nil image whilst receiveing
	  user space samples.

2003-03-06  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* libdb/db_hash.h:
	* libdb/db_insert.c: get error message from db_insert()

	* libdb/db_test.c:
	* dae/opd_proc.c:
	* daemon/opd_image.c:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* pp/op_merge.cpp: update according to the new api

2003-03-06  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: pedantry

2003-03-06  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* doc/oprofile.1.in: